--- a/devoctomy.Passchamp.Maui.UnitTests/devoctomy.Passchamp.Maui.UnitTests.csproj
+++ b/devoctomy.Passchamp.Maui.UnitTests/devoctomy.Passchamp.Maui.UnitTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
 	<UseMaui>true</UseMaui>
 	<IsPackable>false</IsPackable>
 	<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
@@ -17,19 +17,20 @@
   </ItemGroup>
 
   <ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" />
-	  <PackageReference Include="Moq" Version="4.18.2" />
-	  <PackageReference Include="xunit" Version="2.4.2" />
-	  <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.3" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+	  <PackageReference Include="Moq" Version="4.20.69" />
+	  <PackageReference Include="xunit" Version="2.6.2" />
+	  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		  <PrivateAssets>all</PrivateAssets>
 	  </PackageReference>
-	  <PackageReference Include="coverlet.collector" Version="3.1.2">
+	  <PackageReference Include="coverlet.collector" Version="6.0.0">
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		  <PrivateAssets>all</PrivateAssets>
 	  </PackageReference>
-	  <PackageReference Include="coverlet.msbuild" Version="3.1.2">
+	  <PackageReference Include="coverlet.msbuild" Version="6.0.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
