--- a/devoctomy.Passchamp.IntTests/devoctomy.Passchamp.IntTests.csproj
+++ b/devoctomy.Passchamp.IntTests/devoctomy.Passchamp.IntTests.csproj
@@ -15,12 +15,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Tests\E17E1F18-16CC-4DD8-8FB8-1AAF0153168D\1.0\Test1.enc" />
+    <None Remove="Tests\E17E1F18-16CC-4DD8-8FB8-1AAF0153168D\1.0\data.enc" />
     <None Remove="Tests\Input\Test1.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Tests\E17E1F18-16CC-4DD8-8FB8-1AAF0153168D\1.0\Test1.enc">
+    <Content Include="Tests\E17E1F18-16CC-4DD8-8FB8-1AAF0153168D\1.0\data.enc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Tests\Output\testdec.dat">
