--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -152,3 +152,51 @@ jobs:
         with:
           name: android-ci-build
           path: devoctomy.Passchamp.Client/bin/Release/net8.0-android/*Signed.a*
+          
+  release:
+    name: Create Release and Upload Artifacts
+    needs: [build-windows, build-android]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.run_number }}
+          release_name: Release ${{ github.run_number }}
+          draft: ${{ github.ref != 'refs/heads/main' }}
+          prerelease: false
+
+      - name: Download Windows Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: windows-ci-build
+
+      - name: Download Android Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: android-ci-build
+
+      - name: Upload Windows Artifact to Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./windows-ci-build/*.msix
+          asset_name: windows-ci-build.msix
+          asset_content_type: application/vnd.ms-package
+
+      - name: Upload Android Artifact to Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./android-ci-build/*Signed.apk
+          asset_name: android-ci-build.apk
+          asset_content_type: application/vnd.android.package-archive
+
